style.css
/* CSS Styles */
@font-face {
    font-family: game;
    src: url(BoutiqueBitmap9x9_Bold_1.92.ttf);
}
.title {
    width: 100vw;
    text-align: center;
}
.game-board {
    display: grid;
    grid-template-columns: repeat(3, 160px);
    grid-template-rows: repeat(3, 160px);
    margin: 2rem auto;
    max-width: 500px;
    transition: .2s ease-in-out;
    justify-content: center;
}

.playerInformation {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2rem;
}

.ButtonContainer {
    display: flex;
    justify-content: center;
    gap: 2rem;
    margin: 2rem 0rem 0rem 0rem;
}

button {
    background-color: #000000;
    color:white;
    border: none;
    width: 15rem;
    height: 2.5rem;
    font-family: 'game';
    font-weight: bold;
    font-size: 14px;
    cursor: pointer;
    border-radius: 50px;
    transition: .2s ease-in-out;
    /* position: absolute;
    /* transform:translate(-50%,-50%); */
    /* left:50%;
    top:90%;  */


}
button:hover{
    background-color: #363535;
    transition: .2s ease-in-out;
    width: 16rem;

}

.title{
    font-family: 'game';
    font-weight: bold;
    font-size: 30px;
    
}
.cell {
    background-color: #cfe2f5;
    border-radius: 5px;
    border: 0px solid #333;
    display: flex;
    margin: 3px;
    align-items: center;
    justify-content: center;
    font-size: 2.5rem;
    font-weight: bold;
    cursor: pointer;
    transition: .15s ease-in-out;
}

.cell:hover {
    transition: .15s ease-in-out;
    transform: scale(1.3);
    background-color: #bfd9f2;
    animation: spin 1s linear infinite,rainbow 3s linear infinite;

}
#message{
    font-family: 'game';
    font-weight: bold;
    font-size: 90px;
    animation: rainbow2 3s linear infinite;
    position: absolute;
    transform:translate(-50%,-50%);
    left:50%;
    top:50%;

}
label {
    
    font-family: 'game';
    font-weight: bold;
    font-size: 1.5rem;

}

input {
    text-align: center;
    background-color: #cfe2f5;
    border: none;
    border-radius: 0.25rem;
    height: 1.25rem;
    padding: 0.25rem 0.5rem;
}
@keyframes spin {
    from {
      transform: rotate(0deg);
    }
    to {
      transform: rotate(360deg);
    }
  }
@keyframes rainbow{
    0%   { background-color: rgb(244, 51, 51); }
    14%  { background-color: rgb(241, 183, 75); }
    28%  { background-color: rgb(232, 232, 65); }
    42%  { background-color: rgb(87, 218, 87); }
    57%  { background-color: rgb(78, 214, 214); }
    71%  { background-color: rgb(75, 75, 205); }
    85%  { background-color: rgb(180, 91, 180); }
    100% { background-color: rgb(235, 94, 94); }
}
@keyframes rainbow2{
    0%   { color: rgb(244, 51, 51); }
    14%  { color: rgb(241, 183, 75); }
    28%  { color: rgb(232, 232, 65); }
    42%  { color: rgb(87, 218, 87); }
    57%  { color: rgb(78, 214, 214); }
    71%  { color: rgb(75, 75, 205); }
    85%  { color: rgb(180, 91, 180); }
    100% { color: rgb(235, 94, 94); }
}

